another string fix

--- a/app/views/components/_nickname_modal.html.erb
+++ b/app/views/components/_nickname_modal.html.erb
@@ -6,7 +6,7 @@
         <h5>Edit your nickname</h5>
         <%= simple_form_for current_user, remote: true do |f| %>
           <%= f.input :nickname, label: false %>
-          <%= f.submit "Edit", class: "btn btn-warning" %>
+          <%= f.submit "Use Nickname", class: "btn btn-warning" %>
         <% end %>
       </div>
     </div>
