--- a/app/views/results/_share_modal.html.erb
+++ b/app/views/results/_share_modal.html.erb
@@ -15,7 +15,7 @@
         <!-- Facebook/Twitter/Download buttons -->
         <div class="a2a_kit a2a_kit_size_40" data-a2a-title="My game results">
           <a class="a2a_button_twitter mr-2"></a>
-          <%= image_tag "logo-save", id: "save-logo", style: "border-radius:14%; height:41px; width:41px; cursor:pointer"%>
+          <%= image_tag(asset_path("/assets/logo-save.png"), id: "save-logo", style: "border-radius:14%; height:41px; width:41px; cursor:pointer") %>
         </div>
 
         <script async src="https://static.addtoany.com/menu/page.js"></script>
