--- a/app/views/results/_result_impostor_reveal.html.erb
+++ b/app/views/results/_result_impostor_reveal.html.erb
@@ -3,7 +3,7 @@
   <% voted_player = Player.find(voted).nickname %>
 <!-- Compare if player is an imposter and have the highest votes received -->
   <% if (voted_player == impostor.nickname) %>
-    <% if (@highest_vote == count) %>
+    <% if (highest_vote == count) %>
       <p><%= "Imposter #{impostor.nickname} lose!"%></p>
     <% else %>
       <p><%= "Imposter #{impostor.nickname} won!"%></p>
