--- a/app/views/players/_popup_modal_host.html.erb
+++ b/app/views/players/_popup_modal_host.html.erb
@@ -4,8 +4,9 @@
     <div id="modal" class="modal-content m-auto" style="width: 250px;">
       <div class="modal-body text-center">
         <h5>Edit your nickname</h5>
-        <%= form_with url: instances_path do |f| %>
-          <%= f.text_field :nickname, value: params[:nickname]%>
+        <%= form_with url: instances_path, method: :post do |f| %>
+          <%= f.text_field :nickname, value: params[:nickname] %>
+          <%= hidden_field_tag :game_id, @game_id %>
           <div class="pt-3">
             <%= f.submit "Use Nickname", class: "btn btn-warning" %>
           </div>
