--- a/app/views/instances/_instance_update_form.html.erb
+++ b/app/views/instances/_instance_update_form.html.erb
@@ -18,7 +18,7 @@
     <div class="d-flex justify-content-between pb-3">
       <span id="label"> Imposter </span>
         <label id="switch">
-        <input type="checkbox">
+        <input type="checkbox" checked>
         <span id="slider"></span>
       </label>
     </div>
