All meta-tags setup

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -1,3 +1,9 @@
+<!-- Change the metadata for the Results page -->
+<% content_for :meta_title, "Results" %>
+<% content_for :meta_description, "My #{DEFAULT_META["meta_product_name"]} results" %>
+<!-- Find a way to change image with results image -->
+<%# content_for :meta_image, cl_image_path(@offer.photo.path) %>
+
 <div class="container-fluid">
   <div id="result" data-result-id="<%=@result.id%>">
       <div class="row">
@@ -48,6 +54,6 @@
           </div>
         </div>
       </div>
-      
+
   </div>
 </div>
