--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,10 @@
     Hello <%= current_user.nickname %>
   </span>
 
+  <div>
+    <%= cl_image_tag current_user.avatar.key %>
+  </div>
+
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
