--- a/app/views/results/_share_modal.html.erb
+++ b/app/views/results/_share_modal.html.erb
@@ -1,6 +1,6 @@
 <!-- Button trigger modal -->
 <div>
-  <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#shareModal" id="share-btn" data-html2canvas-ignore>
+  <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#shareModal" id="share-btn">
     Share
   </button>
 </div>
