--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -38,7 +38,7 @@
 
     <div class="row">
       <div class="col-12">
-        <div class="sns-icons d-flex justify-content-center my-2">
+        <div class="sns-icons d-flex justify-content-center my-2" data-html2canvas-ignore>
           <i class="fb_with_bg fab fa-facebook-square" id="facebook"></i>
           <i class="fa_with_bg fab fa-twitter-square" id="twitter"></i>
           <i class="fa_with_bg fab fa-instagram-square" id="instagram"></i>
