applied avatars, and removed the redesign result page

--- a/app/views/player_inputs/_player_input.html.erb
+++ b/app/views/player_inputs/_player_input.html.erb
@@ -4,8 +4,11 @@
       <% @round.player_inputs.each do |player_input| %>
         <div id="input-<%= player_input.id %>">
           <div class="<%=player_input.input_value == "Yes" ? "yes" : "no" %>-card shadow-sm p-3 rounded my-2">
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="m-0"><%= player_input.player.user.nickname %></p>
+            <div class="d-flex justify-content-between align-items-center" style="font-size:20px">
+              <div class="d-flex">
+                <%= cl_image_tag player_input.player.user.avatar.key%>
+                <p class="mx-3"><%= player_input.player.user.nickname %></p>
+              </div>
               <p class="m-0"><%= player_input.input_value %></p>
             </div>
           </div> 
