--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -15,7 +15,7 @@
               <h3 id="game-name" ><%= game.name%></h3>
             </div>
                 <!-- Buttons "Join" and "Create" -->
-            <% unless game.name == "Fill the Blank!" || game.name == "Spank the Bank!" %>
+            <% unless game.name == "Mad Libs" || game.name == "Spank the Bank!" %>
               <div class="d-flex justify-content-around w-100">
                 <div>
                   <%= link_to edit_nickname_host_path(game_id: game.id), method: :get do %>
