slight adjustment on the avatar

--- a/app/views/player_inputs/_player_input.html.erb
+++ b/app/views/player_inputs/_player_input.html.erb
@@ -6,7 +6,7 @@
           <div class="<%=player_input.input_value == "Yes" ? "yes" : "no" %>-card shadow-sm p-3 rounded my-2">
             <div class="d-flex justify-content-between align-items-center" style="font-size:20px">
               <div class="d-flex">
-                <%= cl_image_tag player_input.player.user.avatar.key%>
+                <%= cl_image_tag player_input.player.user.avatar.key, class: "avatar" %>
                 <p class="mx-3"><%= player_input.player.user.nickname %></p>
               </div>
               <p class="m-0"><%= player_input.input_value %></p>
