--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
   </span>
 
   <div>
-    <%= cl_image_tag current_user.avatar.key %>
+    <%= cl_image_tag current_user.avatar.key, class: "avatar" %>
   </div>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
