working on no-yes results

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -23,6 +23,7 @@
 
         <!-- Partial for Vote Tally -->
           <div id="vote-tally" class="result-page" style="height:20vh;">
+            <%= render "result_stat" %>
             <%= render  "result_vote_tally" %>
           </div>
 
@@ -48,6 +49,6 @@
           </div>
         </div>
       </div>
-      
+
   </div>
 </div>
