Put buttons outside of result to avoid ajax refreshing

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -20,27 +20,30 @@
           <%= render  "result_chart", players: @players %>
         </div>
 
-        <!-- Partial for Imposter reveal -->
-        <div id="imposter-reveal" class="result-page my-2 text-center" style="height:10vh;">
-          <% if @total_votes == @total_voters%>
-            <%= render  "result_impostor_reveal", impostor: @impostor, vote_tally: @vote_tally, highest_vote: @highest_vote %>
-          <% end %>
-        </div>
-
         <!-- Partial for Vote Tally -->
         <div id="vote-tally" class="result-page" style="height:20vh;">
           <%= render  "result_vote_tally" %>
         </div>
+      </div>
+    </div>
+  </div>
 
-        <!-- Partial for SNS and Continue buttons -->
-        <div class="sns-icons d-flex justify-content-center my-2" data-html2canvas-ignore>
+
+  <!-- This shouldn't get refreshed -->
+  <div id="result-footer" class="d-flex justify-content-center" style="height:5vh;" data-html2canvas-ignore>
+    <div class="row">
+      <div class="col-12">
+
+        <!-- Partial for SNS -->
+        <div class="sns-icons d-flex justify-content-center my-2">
           <i class="fb_with_bg fab fa-facebook-square" id="facebook"></i>
           <i class="fa_with_bg fab fa-twitter-square" id="twitter"></i>
           <i class="fa_with_bg fab fa-instagram-square" id="instagram"></i>
           <i class="fa_with_bg fas fa-caret-square-down" id="download"></i>
         </div>
 
-        <div id="result-footer" class="d-flex justify-content-around" style="height:5vh;" data-html2canvas-ignore>
+        <!-- Continue button only for hos -->
+        <div class="d-flex justify-content-center" id="continue-btn">
           <% if @current_user.id == @instance.user_id %>
             <%# needed for creating a new instance %>
             <%= simple_form_for Instance.new do |f| %>
@@ -53,6 +56,6 @@
 
       </div>
     </div>
-
   </div>
+
 </div>
