--- a/app/assets/stylesheets/pages/_result.scss
+++ b/app/assets/stylesheets/pages/_result.scss
@@ -10,3 +10,19 @@
     border-radius: 8px;
     border-style: groove;
 }
+#overlay{
+    background-color: transparent;
+    z-index: -1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: background-color 1s ease;
+}
+
+#overlay.active{
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 999;
+
+}
