--- a/app/assets/stylesheets/pages/_result.scss
+++ b/app/assets/stylesheets/pages/_result.scss
@@ -12,17 +12,22 @@
 }
 #overlay{
     background-color: transparent;
-    z-index: -1;
+    z-index: -9;
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+    display: none;
     transition: background-color 1s ease;
 }
 
 #overlay.active{
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.7);
     z-index: 999;
 
+}
+
+#impostor-result{
+    font-size: 32px;
 }
