--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -37,7 +37,7 @@
         <!-- Partial for SNS -->
         <div class="sns-icons d-flex justify-content-center my-2">
           <i class="fb_with_bg fab fa-facebook-square" id="facebook"></i>
-          <i class="fa_with_bg fab fa-twitter-square" id="twitter"></i>
+          <a href="" id="twitter"><i class="fa_with_bg fab fa-twitter-square"></i></a>
           <i class="fa_with_bg fab fa-instagram-square" id="instagram"></i>
           <i class="fa_with_bg fas fa-caret-square-down" id="download"></i>
         </div>
