--- a/app/views/instances/_show_waiting.erb
+++ b/app/views/instances/_show_waiting.erb
@@ -1,29 +1,21 @@
-<div class="container-fluid">
-  <h3 class="my-3 text-center"><%= game.name %></h3>
-
-  <!-- Start Button only for Host -->
-  <div class="col-12 justify-content-center text-center py-3">
-    <div class="row">
-      <% if current_user.present? && current_user.id == @instance.user_id %>
-        <div class="col-6">
-          <% @round = Round.new %>
-          <%= simple_form_for([@instance, @round]) do |f| %>
-            <%= f.submit "Start Game", class:"btn btn-primary" %>
-          <% end %>
-        </div>
-
-        <div class="col-6">
-          <!-- Delete Instance button only for Host -->
-          <%= link_to "Back", instance_path(@instance), method: :delete, class: "btn btn-warning" %>
-        </div>
-      <% else %>
-        <div class="col-6">
-          <!-- Leave Instance button for players -->
-          <%= link_to "Leave lobby", instance_player_path(@instance, @players), method: :delete, class: "my-2 btn btn-warning" %>
-        </div>
-      <% end %>
+<div class="waiting-navbar py-2 d-flex justify-content-between">
+  <% if current_user.present? && current_user.id == @instance.user_id %>
+    <div class="d-flex pt-3 pb-2">
+      <!-- Delete Instance button only for Host -->
+      <%= link_to "Back", instance_path(@instance), method: :delete, class: "btn btn-warning" %>
     </div>
+  <% else %>
+    <div class="col-6">
+      <!-- Leave Instance button for players -->
+      <%= link_to "Leave lobby", instance_player_path(@instance, @players), method: :delete, class: "my-2 btn btn-warning" %>
+    </div>
+  <% end %>
+  <div>
+    <%= cl_image_tag current_user.avatar.key, class: "avatar", size: "55x55" %>
   </div>
+</div>
+<div class="container-fluid">
+  <h3 class="my-1 text-center"><%= game.name %></h3>
 
   <div class="row justify-content-around">
     <div id="players" class="col-lg-6 col-md-4 col-sm-6 p-3 my-1" style="height: 360px; overflow: auto;">
@@ -51,6 +43,24 @@
       </div>
 
     </div>
+
+  <!-- Start Button only for Host -->
+  <div class="col-12 justify-content-center text-center pb-3 pt-2">
+    <div class="row justify-content-center">
+      <% if current_user.present? && current_user.id == @instance.user_id %>
+        <div class="col-10">
+          <% @round = Round.new %>
+          <%= simple_form_for([@instance, @round]) do |f| %>
+            <%= f.submit "Start Game", class:"btn btn-primary", style: "width: 280px" %>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+
+
+
 
     <div id="settings" class="col-lg-4 col-md-4 col-sm-6 p-3 my-1" style="height: fit-content">
 
