--- a/app/assets/stylesheets/components/_logo.scss
+++ b/app/assets/stylesheets/components/_logo.scss
@@ -19,7 +19,7 @@
     transform: translate(0, 10px);
     stroke-dashoffset: 0;
     stroke-dasharray: 500px;
-    animation: dash .1s linear;
+    animation: dash 4.5s linear;
   }
 
 
