--- a/app/assets/stylesheets/pages/_impostor.scss
+++ b/app/assets/stylesheets/pages/_impostor.scss
@@ -1,5 +1,14 @@
 .notification {
-  color: $orange;
   font-family: $body-font;
   font-weight: 500;
+}
+
+#notification-impostor{
+  color: rgb(255, 52, 52);
+  text-shadow: 1px 1px 2px black;
+}
+
+#notification-non{
+  color: rgb(176, 255, 176);
+  text-shadow: 1px 1px 2px black;
 }
