use the right partial in results tally

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -36,13 +36,12 @@
 
         <!-- Partial for Vote Tally -->
         <div id="vote-tally" class="result-page" style="height:20vh;">
-          <%= render  "result_vote_tally" %>
+          <%= render  "result_stat" %>
         </div>
 
       </div>
     </div>
   </div>
-
 
   <!-- This shouldn't get refreshed -->
   <div id="result-footer" class="d-flex justify-content-center" style="height:5vh;" data-html2canvas-ignore>
