added avatars on vote page

--- a/app/views/rounds/_show_answers.html.erb
+++ b/app/views/rounds/_show_answers.html.erb
@@ -13,7 +13,7 @@
     <p>Have you ever <%= game_content.content %>?</p>
   </div>
 
-  <div class="row justify-content-center" style="height: 50vh">
+  <div class="row justify-content-center" style="height: 50vh; overflow: auto;">
     <div id="results" class="col-lg-4 col-md-6 col-sm-12">
       <div id="inputs" data-round-id="<%= round.id %>">
         <!-- Player inputs @ app/views/player_inputs/_player_input.html.erb-->
@@ -21,7 +21,7 @@
       </div>
     </div>
   </div>
-  <div class="d-flex">
+  <div class="d-flex pt-3">
     <p>Players answered:</p>
     <div class="px-1" id="player-input-count">
       <%= render "show_player_inputs_count", round: round %>
