--- a/app/views/votes/new.html.erb
+++ b/app/views/votes/new.html.erb
@@ -1,17 +1,16 @@
-<div class="container-fluid" style="height: 75vh;">
-  <div class="d-flex justify-content-center align-items-center h-100">
-    <div class="text-center">
-      <h3 class="mb-4">Who do you think was the impostor?</h3>
-
-      <% @players.each do |player| %>
-        <% if @current_user.id != player.user_id %> <!-- Cannot vote for yourself -->
-          <%= simple_form_for([@instance, @vote]) do |f| %>
-            <%= hidden_field_tag :voted_player, player.id %>
-            <%= f.submit player.nickname, class:"btn btn-info my-2" %>
-          <% end %>
-        <% end %>
+<div class="container-fluid py-3" style="height: 100vh;">
+<h3 class="m-5 text-center">Who do you think was the <strong style="color: #e42c63; text-shadow: 1px 1px 2px black">Impostor</strong>?</h3>
+<div class="d-flex flex-wrap justify-content-around">
+  <% @players.each do |player| %>
+    <% if @current_user.id != player.user_id %> <!-- Cannot vote for yourself -->
+      <%= simple_form_for([@instance, @vote]) do |f| %>
+        <%= hidden_field_tag :voted_player, player.id %>
+        <div class="d-flex flex-column align-items-center">
+          <%= cl_image_tag player.user.avatar.key, class: "avatar" %>
+          <%= f.submit player.nickname, class:"btn btn-info my-2" %>
+        </div>
       <% end %>
-
-    </div>
-  </div>
+    <% end %>
+  <% end %>
+</div>
 </div>
