--- a/app/views/rounds/_show_answers.html.erb
+++ b/app/views/rounds/_show_answers.html.erb
@@ -1,17 +1,16 @@
-<div class="container-fluid">
-  <% if instance.max_rounds == round.number %>
-    <div>
-      <h3 class="py-4 text-center">Last Round's Answers</h3>
-    </div>
-  <% else %>
-    <div>
-      <h3 class="py-4 text-center">Round <%= round.number %> Answers</h3>
-    </div>
-  <% end %>
+<div class="container-fluid" style="height: 75vh;">
+  <div class="text-center">
+    <% if instance.max_rounds == round.number %>
+      <h5 class="pt-3">FINAL ROUND</h5>
+      <h3 class="mb-3">Answers</h3>
+    <% else %>
+      <h5 class="mt-3">ROUND <%= round.number %></h5>
+      <h3 class="mb-3">Answers</h3>
+    <% end %>
 
-  <div class="py-2 text-center">
-    <p>Have you ever <%= game_content.content %>?</p>
-  </div>
+    <div class="py-2">
+      <p>Have you ever <%= game_content.content %>?</p>
+    </div>
 
   <div class="row justify-content-center" style="height: 50vh">
     <div id="results" class="col-lg-4 col-md-6 col-sm-12">
@@ -22,7 +21,7 @@
     </div>
   </div>
   <div class="d-flex">
-    <p>Players answered:</p>
+    <p>Submitted answers:</p>
     <div class="px-1" id="player-input-count">
       <%= render "show_player_inputs_count", round: round %>
     </div>/
