minor detail fix to center avatar in the card

--- a/app/views/results/_result_chart.html.erb
+++ b/app/views/results/_result_chart.html.erb
@@ -1,5 +1,5 @@
 <% players.each do |player| %>
-  <div id="result-card" class="card m-2 p-2" style="height: 80px">
+  <div id="result-card" class="card m-2 p-2">
     <div class="d-flex justify-content-between">
       <div class="d-flex">
         <div id="result-avatar"><%= cl_image_tag player.user.avatar.key, class: "avatar" %></div>
