--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -31,12 +31,12 @@
           </div>
 
           <!-- Partial for chart -->
-          <div id="chart" class="result-page my-2" style="heig ht:40vh; overflow: auto;">
+          <div id="chart" class="result-page my-2" style="height:40vh; overflow: auto;">
             <%= render  "result_chart", players: @players %>
           </div>
 
           <!-- Partial for Stats -->
-          <div id="vote-stat px-2" class="result-page" style="height:40vh">
+          <div id="vote-stat px-2" class="result-page" style="height:30vh overflow: hidden;">
             <%= render  "result_stat" %>
           </div>
         </div>
