--- a/app/views/instances/_show_game_settings.html.erb
+++ b/app/views/instances/_show_game_settings.html.erb
@@ -19,11 +19,12 @@
 </div>
 
 <div class="imposter d-flex justify-content-between">
-  <div>
-    <p>Impostor:</p>
-  </div>
-  <div>
-    Yes <!-- Imposter column here -->
+  <p>Impostor:</p>
+  <div id="container-impostor-info">
+    <div id="btn-impostor-info" class="btn btn-primary">
+      <i class="fas fa-info"></i>
+    </div>
+    <p>Yes</p>
   </div>
 </div>
 
