fully working impostor info modal

--- a/app/views/instances/_show_game_settings.html.erb
+++ b/app/views/instances/_show_game_settings.html.erb
@@ -21,9 +21,8 @@
 <div class="imposter d-flex justify-content-between">
   <p>Impostor:</p>
   <div id="container-impostor-info">
-    <div id="btn-impostor-info" class="btn btn-primary">
-      <i class="fas fa-info"></i>
-    </div>
+    <!-- Button and modal for impostor information -->
+    <%= render "impostor_info_modal" %>
     <p>Yes</p>
   </div>
 </div>
