--- a/app/views/instances/_instance_update_form.html.erb
+++ b/app/views/instances/_instance_update_form.html.erb
@@ -16,7 +16,7 @@
       <%= f.input :game, as: :select, collection: ["Have You ever", "Picture Me", "Oukami"] ,label: false, default: "Have you ever" %>
     </div>
     <div class="d-flex justify-content-between pb-3">
-      <span id="label"> Imposter </span>
+      <span id="label"> Impostor </span>
         <label id="switch">
         <input type="checkbox" checked>
         <span id="slider"></span>
