--- a/app/assets/stylesheets/components/_slider.scss
+++ b/app/assets/stylesheets/components/_slider.scss
@@ -39,11 +39,11 @@
 }
 
 input:checked + #slider {
-  background-color: #2196F3;
+  background-color: #6fd760;
 }
 
 input:focus + #slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #6fd760;
 }
 
 input:checked + #slider:before {
