--- a/app/views/instances/_impostor_info_modal.html.erb
+++ b/app/views/instances/_impostor_info_modal.html.erb
@@ -9,7 +9,7 @@
     <div class="modal-content bg-primary" id="settings-modal">
       <div class="modal-body d-flex flex-column">
         <div class="mb-4" style="border-bottom: 1px solid #033b4d; text-align: center;">
-          <h5>Impostor Info</h5>
+          <h5>Impostor info</h5>
         </div>
         <p>Every game will have a randomly chosen impostor.</p>
         <p>The impostor wins by:
