--- a/app/views/instances/_impostor_info_modal.html.erb
+++ b/app/views/instances/_impostor_info_modal.html.erb
@@ -11,7 +11,7 @@
         <div class="mb-4" style="border-bottom: 1px solid #033b4d; text-align: center;">
           <h5>Impostor info</h5>
         </div>
-        <p>Every game will have a randomly chosen impostor.</p>
+        <p>Every game will have one randomly chosen impostor.</p>
         <p>The impostor wins by:
           <ul>
             <li>answering with lies and</li>
