--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,6 +1,14 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@1,500&family=Pacifico&display=swap');
+
+@font-face {
+  font-family: 'PricedownBl-Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: url('../fonts/pricedownbl.woff') format('woff');
+}
+
 // Define fonts for body and headers
 $body-font: "roboto", "Helvetica", "sans-serif";
 $headers-font: "dosis", "Helvetica", "sans-serif";
