--- a/app/views/instances/_show_waiting.erb
+++ b/app/views/instances/_show_waiting.erb
@@ -51,7 +51,9 @@
         <div class="col-10">
           <% @round = Round.new %>
           <%= simple_form_for([@instance, @round]) do |f| %>
-            <%= f.submit "Start Game", class:"btn btn-primary", style: "width: 280px" %>
+          <div>
+            <%= f.submit "Start Game", class:"btn btn-primary", style: "width: 70vw" %>
+          </div>
           <% end %>
         </div>
       <% end %>
