--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -11,3 +11,6 @@
   <%= render "show_waiting", players: @players, instance: @instance, game: @game, qr_code: @svg %>
   </div>
 </div>
+
+
+<!--   200 PRs FOR THE WIN!   -->
