--- a/app/views/instances/_instance_update_form.html.erb
+++ b/app/views/instances/_instance_update_form.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="d-flex justify-content-between">
       <%= f.label :game, "Game" %>
-      <%= f.input :game, as: :select, collection: ["Have You ever", "Picture Me", "Oukami"] ,label: false, default: "Have you ever" %>
+      <%= f.input :game, as: :select, collection: ["Have You Ever", "Picture Me", "Oukami"] ,label: false, default: "Have you ever" %>
     </div>
     <div class="d-flex justify-content-between">
       <%= f.label :max_players, "Max Players" %>
