--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -5,13 +5,15 @@
 <!-- Find a way to change image with results image -->
 <%# content_for :meta_image, cl_image_path(@result.photo.path) %>
 
-<div class="container-fluid">
+<div class="container-fluid" style="100vh">
   <div id="result" data-result-id="<%=@result.id%>">
 
     <div id="overlay" class="d-flex justify-content-center align-items-center">
       <div id="impostor-reveal" class="d-none">
         <%= render "result_impostor_reveal", impostor: @impostor, vote_tally: @vote_tally, highest_voted_player: @highest_voted_player %>
-        <div class="text-center"><button id="return-screen" class="btn btn-warning">Back to Results</button></div>
+        <div class="text-center">
+          <button id="return-screen" class="btn btn-warning">Back to Results</button>
+        </div>
       </div>
     </div>
 
@@ -45,7 +47,6 @@
       </div>
     </div>
   </div>
-
   <!-- This shouldn't get refreshed -->
   <div id="result-footer" class="d-flex justify-content-center" style="height:5vh;" data-html2canvas-ignore>
     <div class="row">
@@ -73,5 +74,4 @@
       </div>
     </div>
   </div>
-
 </div>
