--- a/app/views/rounds/_show_answers.html.erb
+++ b/app/views/rounds/_show_answers.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid pt-3">
+<div class="container-fluid pt-3" style="height: 100vh;">
   <div class="text-center">
     <% if instance.max_rounds == round.number %>
       <h5 class="pt-3">FINAL ROUND</h5>
