--- a/app/views/rounds/_show_question.html.erb
+++ b/app/views/rounds/_show_question.html.erb
@@ -9,7 +9,7 @@
       <h5 class="mb-2">Question</h5>
       <h3>Have you ever <%= game_content.content %>?</h3>
 
-      <div class="p-4">
+      <div class="p-5 mt-5">
         <div class="row justify-content-center">
 
           <% @player_input = PlayerInput.new %>
