--- a/app/views/players/_popup_modal_player.html.erb
+++ b/app/views/players/_popup_modal_player.html.erb
@@ -3,11 +3,11 @@
   <div class="modal-dialog modal-dialog-centered">
     <div id="modal" class="modal-content m-auto" style="width: 250px;">
       <div class="modal-body text-center">
-        <h5>Edit your nickname</h5>
+        <h5>Update nickname</h5>
         <%= form_with url: create_players_instance_path(instance), local: true, method: :get do |f| %>
-          <%= f.text_field :nickname, value: params[:nickname]%>
+          <%= f.text_field :nickname, value: current_user.nickname, id: "user_nickname" %>
           <div class="pt-3">
-            <%= f.submit "Use Nickname", class: "btn btn-warning" %>
+            <%= f.submit "Use nickname", class: "btn btn-warning" %>
           </div>
         <% end %>
       </div>
