--- a/app/views/players/edit_nickname_host.html.erb
+++ b/app/views/players/edit_nickname_host.html.erb
@@ -1,3 +1,3 @@
 <div class="container-fluid">
-  <%= render "popup_modal_host" %>
+  <%= render "popup_modal_host", locals: { current_user: @current_user } %>
 </div>
