--- a/app/views/players/edit_nickname_player.html.erb
+++ b/app/views/players/edit_nickname_player.html.erb
@@ -1,3 +1,3 @@
 <div class="container-fluid">
-  <%= render "popup_modal_player", instance: @instance %>
+  <%= render "popup_modal_player", instance: @instance, locals: { current_user: @current_user } %>
 </div>
