--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
   </button>
   <div class="d-flex align-items-center">
     <span class="navbar-text px-3">
-    <div class="box2 sb12">Hi, <%= (current_user.nickname).first(12) %></div>
+    <div class="box2 sb12">Hi, <%= current_user.nickname %></div>
     </span>
 
     <div>
