all caps passcode, force all caps when typing passcode

--- a/app/views/instances/_show_game_settings.html.erb
+++ b/app/views/instances/_show_game_settings.html.erb
@@ -29,5 +29,5 @@
 
 <div class="d-flex justify-content-between">
   <p>Passcode:</p>
-  <p><%= instance.passcode %></p>
+  <p><%= instance.passcode.upcase %></p>
 </div>
